# sn_llama_counsel

./: .gitignore  README.md  config.yaml  counsel.sh  pyproject.toml
backend/: __init__.py  main.py  runner.py  schemas.py
counsels/: code_review.yaml  creative.yaml  general.yaml  research.yaml
frontend/: svelte.config.js  vite.config.ts
frontend/scripts/: post-build.sh
frontend/src/lib/components/app/chat/ChatForm/: ChatForm.svelte  ChatFormFileInputInvisible.svelte
frontend/src/lib/components/app/chat/ChatForm/ChatFormActions/: ChatFormActionAttachmentsDropdown.svelte  ChatFormActions.svelte
frontend/src/lib/components/app/chat/ChatMessages/: ChatMessageAssistant.svelte
frontend/src/lib/components/app/chat/ChatScreen/: ChatScreen.svelte
frontend/src/lib/components/app/chat/ChatSidebar/: ChatSidebar.svelte
frontend/src/lib/components/app/counsel/: CounselChatSelector.svelte  CounselDeliberationPanel.svelte  CounselHistory.svelte  CounselSelector.svelte  CounselView.svelte  CreateCounselDialog.svelte  FollowUpInput.svelte  MemberCard.svelte  SynthesisPanel.svelte
frontend/src/lib/stores/: chat.svelte.ts  counsel.svelte.ts
frontend/src/lib/utils/: browser-only.ts  process-uploaded-files.ts
frontend/src/routes/counsel/: +page.svelte
sn_llama_counsel/: config.yaml
sn_llama_counsel/backend/: main.py  persistence.py  runner.py  schemas.py  selector.py
